[package]
name = "cups-filter-sys"
version = "0.1.0"
edition = "2024"
description = "Low-level interface to the CUPS printing library (filter version)."
authors = ["Christian Legnitto <christian@legnitto.com>", "Cliff L. Biffle <code@cliffle.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
publish = false

[dependencies]

[build-dependencies]
bindgen = "0.71.1"
